Revert "Dan things"
This reverts commit 1e6bdb02f2c5058f56282e8ff807fe9ac08f8ae0.

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,10 @@ body {
     max-height: 600px;
 }
 
+.hidden {
+  display: none;
+}
+
 /* .container {
     max-width: 1000px;
     margin: 0 auto;
